<!--<resources>--><!--<string name="app_name">DiceRoller-Solution</string>--><!--</resources>-->

<resources>
    <string name="app_name">Dice Roller</string>
    <string name="action_roll">Roll</string>
    <string name="action_one">One</string>
    <string name="action_two">Two</string>
    <string name="action_three">Three</string>

    <string name="change_color">Change Color</string>

    <string name="predefined">Predefined</string>
    <string name="g">G</string>
    <string name="b">B</string>
    <string name="r">R</string>
    <string name="custom">Custom</string>
    <string name="a">A</string>

    <string name="action_four">Four</string>


    <string name="action_five">Five</string>
    <string name="action_colors">Colors…</string>
    <string name="action_about">About…</string>
    <string name="action_stop">Stop</string>

    <string name="dice_one">1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pick_roll_length">Pick Roll Length</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_one">Add One</string>
    <string name="subtract_one">Subtract One</string>

    <string name="change_sides">Change Sides</string>
    <string name="roll">Roll</string>
    <string name="agapitus_iboro">Agapitus Iboro</string>
    <string name="for_itec_created_fall_2019">For ITEC 4550 Fall 2019</string>
    <string name="created_by">Created By:</string>
    <string name="description">This is an app designed to show different features possible when making an android app. It makes use of Activities, Menus, Intents, Radio buttons
    and more.</string>
    <string name="choose_from">Choose From:</string>
    <string name="_4_sided">4-Sided</string>
    <string name="_6_sided">6-Sided</string>
    <string name="_10_sided">10-Sided</string>


    <!--            <color name="Red">#FF0000</color>-->
    <!--            <color name="Green">#008000</color>-->
    <!--            <color name="Blue">#0000ff</color>-->
    <!--            <color name="Cyan">#00FFFF</color>-->
    <!--            <color name="Yellow">#FFFF00</color>-->
    <!--            <color name="Magenta">#FF00FF</color>-->

    <!--    <string-array name="color_array">-->
    <!--        <item>#FF0000</item>-->
    <!--        <item>#008000</item>-->
    <!--        <item>#0000ff</item>-->
    <!--        <item>#00FFFF</item>-->
    <!--        <item>#FFFF00</item>-->
    <!--        <item>#FF00FF</item>-->
    <!--    </string-array>-->

    <!--    #FF0000-->
    <!--    #008000-->
    <!--    #0000ff-->
    <!--    #00FFFF-->
    <!--    #FFFF00-->
    <!--    #FF00FF-->

    <string-array name="color_array">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Yellow</item>
        <item>Magenta</item>
    </string-array>

    <string-array name="color_array_main">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Yellow</item>
        <item>Magenta</item>
    </string-array>

    <string-array name="length_array">
        <item>Short</item>
        <item>Medium</item>
        <item>Long</item>
    </string-array>

</resources>
